# Mlops_talleres

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  README_dev.md  Taskfile.yml  docker-compose.yaml  docker-compose.yml  docker_bak  pyproject.toml  requirements.txt  train.py
airflow/: Dockerfile  requirements.txt
api/: Dockerfile  main.py  pyproject.toml  requirements.txt
api/app/: main.py  schemas.py
app/: main.py  schemas.py
app/models/: species_classifier.joblib
app/schemas/: predict.py
app/static/: index.html
dags/: covertype_pipeline.py  penguins_pipeline.py
data_api/: .gitignore  Dockerfile  main.py  prepare.ipynb  project_2  timestamps.json
data_management/init_db/: setup_tables.sql
docs/: predict_endpoint.md
init-scripts/: init_data_db.sql
jupyter/: Dockerfile  pyproject.toml  requirements.txt
jupyter/notebooks/: 01_experimentos_mlflow.ipynb  train_models.ipynb  train_neural_networks.ipynb
jupyter/notebooks/.ipynb_checkpoints/: train_models-checkpoint.ipynb
mlflow/: Dockerfile
notebooks/: ML_Metadata.ipynb  TFDV.ipynb  data_preparation.ipynb  model_training.ipynb  penguins_clean.csv
taller-locust/: README.md  docker-compose.locust.yaml  docker-compose.yaml  locustfile.py
taller-locust/resultados/: locust_failures.csv  locust_stats.csv  locust_stats_history.csv
