[project]
name = "covertype-api"
version = "0.1.0"
description = "Inference API for Covertype ML predictions (loads models from MinIO)"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.30.6",
    "pandas==2.2.3",
    "scikit-learn==1.8.0",
    "joblib==1.4.2",
    "minio>=7.2.0",
]
