[project]
name = "penguins-jupyter"
version = "0.1.0"
description = "JupyterLab environment for Palmer Penguins ML training"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.0",
    "pandas==2.2.3",
    "scikit-learn==1.5.2",
    "palmerpenguins==0.1.4",
    "joblib==1.4.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "setuptools<78",
]
