[project]
name = "covertype-jupyter"
version = "0.1.0"
description = "JupyterLab environment for Covertype ML training"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.0",
    "pandas==2.2.3",
    "scikit-learn==1.8.0",
    "joblib==1.4.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "minio>=7.2.0",
    "setuptools<78",
]
